[tool.poetry]
name = "flask-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Grant George <grant.george@unitedmasters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "2.3.3"
flask-restx = "1.2.0"
werkzeug = "2.3.8"
Flask-SQLAlchemy = "3.1.1"
psycopg2-binary = "2.9.9"
gunicorn = "21.2.0"
flask-admin = "1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
isort = "5.12.0"
flake8 = "6.1.0"
black = "23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
